# omnirpc

./: COPYRIGHT  LICENSE  Makefile  Makefile.in  README  config.status  configure  configure.ac
doc/: README  README.ja
doc/htdocs/: omnirpc.htm
doc/htdocs.ja/: API.html  F-API.html  IDL.html  SMP.html  autoinit.html  cluster.html  command.html  exec.html  fortran.html  globus.html  handle.html  hostfile.html  index.html  install.html  overview.html  parallel.html  ssh.html  start.html  tips.html
example/cpi/: Makefile.in  cpi-lib.c  cpi-mpi.c  cpi-omrpc.c  cpi.idl
example/ep/: Makefile.in  README  c_randdp.c  c_timers.c  ep.c  ep.idl  npb-C.h  npbparams.h
example/file/: testfile.c  testfile.idl  testfilep.c  testfilep.idl
example/fortran/: ex.f  f_innerprod.f  f_ip.idl  ip.f
example/intro/: calc_sin.idl  calc_sin.rex.c  ex.c
example/knap/: Makefile.in  README  data40  knap-par.c  knap.idl  knap1-par.c  knap1.idl  knap_dfs.c  makeknap.c  second.c
include/: Makefile.in  OmniRpc.h  ninf_stub_info.h  omni_config.h.in  omni_headers.h  omni_platform.h  omrpc_mpi_lib.h  omrpc_stub_lib.h
mk/: genflags.sh  rules.mk  updateheaderconfig  vars.mk  vars.mk.in
qcrpc/: Makefile  Makefile.in  README-fugaku.txt  README-rex-rest.txt  README.txt
qcrpc/QC_API/: Makefile  Makefile.in  TODO  main.c  mult.hpp  mytest.c  mytest2.c  qcrpc_qasm_rest.h  qcs_api.cpp  qcs_api.hpp  qcs_gate_funcs.hpp  qcs_ket.cpp  qcs_ket.hpp  qcs_qulacs.cpp  qcs_qulacs.hpp  qcs_rpc_master.cpp  qcs_types.h  sample.qasm
qcrpc/python/: Makefile.in  README-qiskit.txt  qcrpc.c  sample.py
qcrpc/python/qiskit_qcrpc/: __iniy__.py  qcrpc_backend.py  qcrpc_provider.py  version.py
qcrpc/qcmeasure/: Makefile.in  qcmeasure.c
qcrpc/qcrex/: Makefile.in  README-run_riqu.txt  qc-quri-wrapper.sh  qc-quri-wrapper.sh.in  qcrex.idl  qcrex_conf.h.in  qcrex_qasm.idl  qcrex_qasm_rest.idl  run_riqu.py.in
qcrpc/rest/include/: ibmq_json.hpp  ibmq_rest.hpp  rexrest.h  rexrest_common.hpp  rqc_json.hpp  rqc_rest.hpp
qcrpc/rest/src/: Makefile.in  ibmq_json.cpp  ibmq_rest.cpp  rexrest.cpp  rqc_json.cpp  rqc_rest.cpp
src/libomrpc/: Makefile.in  myx_master_wrapper.h  myx_worker_wrapper.h  ninf_comm_lib.c  ninf_comm_lib.h  ninf_misc.c  omrpc_agent.h  omrpc_call.c  omrpc_client.c  omrpc_defs.h  omrpc_defs.h.in  omrpc_exec.c  omrpc_exec.h  omrpc_exec_lib.c  omrpc_globus.c  omrpc_globus.h  omrpc_host.c  omrpc_host.h  omrpc_io.c  omrpc_io.h  omrpc_io_event.c  omrpc_io_globus.c  omrpc_io_rw.c  omrpc_io_rw_file.c  omrpc_local.c  omrpc_misc.c  omrpc_mon.c  omrpc_mon.h  omrpc_mpi.c  omrpc_mpi.h  omrpc_mpi_client.c  omrpc_mpi_event.c  omrpc_mpi_io.c  omrpc_mpi_io.h  omrpc_mpi_lib.c  omrpc_rpc.c  omrpc_rpc.h  omrpc_rpc_flib.c  omrpc_rpc_lib.c  omrpc_schedule.c  (+9 more)
src/omrpc-agent/: Makefile  Makefile.in  omrpc_agent_defs.h  omrpc_agent_globus.c  omrpc_agent_job.c  omrpc_agent_main.c  omrpc_agent_mxio.c  omrpc_daemon_defs.h  omrpc_daemon_job.c  omrpc_daemon_main.c  semantic.cache
src/omrpc-daemon/: Makefile.in  omrpc_daemon_defs.h  omrpc_daemon_job.c  omrpc_daemon_main.c
src/omrpc-gen/: Makefile.in  ninf_IDL_lex.c  omrpc-cc.in  omrpc-fc.in  omrpc_gen_stub.c  semantic.cache
src/omrpc-gen-mpi/: Makefile.in  ninf_IDL.h  ninf_IDL.y  omrpc-cc-mpi.in  omrpc_gen_main.c  omrpc_gen_misc.c  omrpc_gen_stub.c  omrpc_mpi_lib.c
src/omrpc-gen-xmp/: Makefile.in  ninf_IDL_lex.c  omrpc-cc-xmp.in  omrpc_gen.h  omrpc_gen_compile.c  omrpc_gen_mem.c  omrpc_gen_stub.c  omrpc_xmp_lib.c  y.tab.dummy.h
src/omrpc-register/: Makefile  Makefile.in  omrpc-register.c
src/omrpc-register-yml/: Makefile.in  omrpc-register-yml.c  omrpc_reg_defs.h  omrpc_reg_defs.h.in
test/: README
test/call-test/: Makefile.in  rpc-async-test1.c  rpc-call-test1.c  rpc-call-test2.c  rpc-call-test3.c
test/comm-test/: Makefile.in  test1.c  test2.c  test3.c
test/exec-test/: Makefile.in  remote-exec-test1.c  remote-exec-test2.c
test/stub-test/: Makefile.in  init_sample.idl  local-exec-test.c  sample-lib.c  sample.idl
test/xml/: testxml.c  testxml.xml
tools/monitor/: Makefile.in  OmrpcMonitor.in  OmrpcMonitor.java
tools/tlogview/: ColorMapFrame.java  Makefile.in  tlogData.java  tlogDataFile.java  tlogDump.java  tlogInit.java  tlogPanel.java  tlogview.in  tlogview.java
utils/: addr64.c  align.c  chkvoidp.c  config.guess  hasqd.c  size.c
